--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,8 @@ dependencies:
   date_format: ^2.0.7
   rating_dialog: ^2.0.4
   flutter_svg: ^2.0.5
-
+  url_launcher: ^6.0.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
