--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,8 @@ dependencies:
   rating_dialog: ^2.0.4
   flutter_svg: ^2.0.5
   url_launcher: ^6.0.0
-  calendar_timeline: ^1.1.2 
+  calendar_timeline: ^1.1.2
+  unicons: any 
   
 dev_dependencies:
   flutter_test:
