--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,21 +36,21 @@ dependencies:
   animated_text_kit: ^4.2.2
   http: ^0.13.5
   shared_preferences: ^2.1.0
-  image_picker: ^0.8.7+4
   material_design_icons_flutter: ^6.0.7096
   date_format: ^2.0.7
   rating_dialog: ^2.0.4
   flutter_svg: ^2.0.5
   url_launcher: ^6.0.0
   calendar_timeline: ^1.1.2
-  unicons: any 
+  unicons: any
+  google_mlkit_text_recognition: ^0.4.0
+  image_picker: ^0.8.5+3
+  image_cropper: ^3.0.0
   
   
 dev_dependencies:
   flutter_test:
-    sdk: flutter
-  image_picker: ^0.8.4+4
-  
+    sdk: flutter  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pu     b/pubspec
